[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.10", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
select = "0.5.0"
regex = "1"
uuid = { version = "0.8.2", features = ["v4"] }
actix-web = "4.1.0"
chrono = "0.4.19"
rand = "0.8.5"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]
